# pitchshifterpp

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  .gitattributes
cmake_modules/: FindFFTW.cmake  FindLibSndFile.cmake
include/pitchshifterpp/: fftwpvadapter.hpp  phasevocoder.hpp  used_math.hpp
lib/fftw/: libfftw3-3.lib
src/: pitchshifterpp.cpp
